--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   "plugins": ["react"],
   "rules": {
     "react/prefer-stateless-function": "off",
+    "react/prop-types": "off",
     "no-unused-vars": "warn",
     "linebreak-style": "off"
   }
