--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "date-fns": "^2.29.2",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
