--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.7",
     "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
