--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "gh-pages": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -26,6 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "vite": "^3.0.0"
-  }
+  },
+  "homepage": "http://omarpixel9.github.io/cv-app"
 }
