--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
+    "react-scripts": "^5.0.1",
     "vite": "^3.0.0"
   },
   "homepage": "http://omarpixel9.github.io/cv-app"
